adopt API changes for replicate support